# amd-model-porter

./: .gitignore  README.md  pyproject.toml
porter/: __init__.py  agent.py  agent_loop.sh  analyzer.py  benchmark.py  cli.py  config.py  database.py  diagnoser.py  docker_manager.py  grid_search.py  known_issues.yaml  pipeline.py  server_config.py
porter/web/: app.py
porter/web/static/: style.css
porter/web/templates/: base.html  leaderboard.html  progress.html  results.html  submit.html
