[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amd-model-porter"
version = "0.1.0"
description = "Automated model porting pipeline for AMD MI300X/MI355X GPUs via SGLang"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "jhinpan"}]

dependencies = [
    "click>=8.1",
    "huggingface-hub>=0.20",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "sse-starlette>=1.8",
    "pyyaml>=6.0",
    "requests>=2.31",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.2"]

[project.scripts]
porter = "porter.cli:cli"

[tool.setuptools.packages.find]
include = ["porter*"]

[tool.ruff]
line-length = 100
target-version = "py310"
